# neuro

./: .gitignore  CLAUDE.md  HH_constants.py  HH_model.py  Makefile  README.md  TODO.md  fitted_rates.py  gating.py  main.py  main.typ  mnist_supervised_dayan_abbott_ch8.ipynb  pyproject.toml  tau_and_steady.py  todo
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: main.typ  rate-estimation.typ  references.bib  results.typ
examples/: baseline-run.toml  ceiling-sweep.toml  credit-assignment-run.toml
experiments/: baseline.py  ceiling_sweep.py  low_rate_sweep.py  scratch.py
model/: README.md  main.py  scratchbook.ipynb  trajectories.py
notebooks/: baseline.py  bias_current.py  constant_reward.py  convergence.py  credit_assignment.py  exploratory.py  linear_gated_map.py  linear_reward.py  neuromod_types.py  param_sweep.py  poisson_firing.py  rate_estimator.py  rate_sweep_2d.py  reward_signals.py  target_shapes.py  trajectories.py  verified.py  weight_transducer.py
paper/: analysis.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.tex  references.bib
scripts/: analysis.py  analysis_regimes.py  build_sweeps_index.py  convergence_sweep.py  rk4_nonlinear_validation.py  run_full_sweep.sh  run_rate_sweep.sh  serve_run.py  serve_sweep.py  sweep_all_pairs.py  sweep_target_ceiling.py  test_general_targets.py  test_rk4_nonlinear.py  view_sweep_cells.py
src/neuro/: __init__.py  cache.py  cli.py  config.py  convergence.py  dynamics.py  io.py  journal.py  params.py  plotting.py  recording.py  sim.py  simulate.py  sweep.py  sweep_viewer.py  trajectories.py  tui.py
tests/: rk4_nonlinear_validation.py  test_cache.py  test_convergence.py  test_dynamics.py  test_general_target.py  test_journal.py  test_n_pre.py  test_rk4.py
