[project]
name = "neuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "plotly>=6.0.1",
    "polars>=1.33.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.0",
]
