[project]
name = "neuro"
version = "0.1.0"
description = "Neuromodulated STDP simulation and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "plotly>=6.0.1",
    "polars>=1.33.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.0",
    "typer>=0.24.1",
]

[project.scripts]
neuro = "neuro.sim:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuro"]

[tool.pyright]
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
