[project]
name = "neuro"
version = "0.1.0"
description = "Neuromodulated STDP simulation and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "plotly>=6.0.1",
    "polars>=1.33.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuro"]

[tool.marimo.runtime]
output_max_bytes = 10_000_000

[tool.pyright]
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"

# Marimo cells emit their last expression as the cell output.
[[tool.pyright.executionEnvironments]]
root = "notebooks"
reportUnusedExpression = "none"

[dependency-groups]
dev = [
    "marimo>=0.16.0",
    "pytest>=9.0.2",
]
